# AutumnRTS

./: .DevelopmentProgress.txt  .gitignore  Game.tscn  GodotRustBridge.tres  MicroTournament.md  Presentation Architecture.txt  README.md  Roadmap.txt  TODO before look for contributors.md  Thoughts about game architecture.txt  YASI list.txt  YASI.md  YASI.txt  geany_proj.proj  project.godot
.import/: Placeholder_Marine.glb-2e81314958cfe872c0c5598c7307f656.md5  Placeholder_Marine.glb-2e81314958cfe872c0c5598c7307f656.scn  (+17 more)
Simulation/: Cargo.toml
Simulation/src/: common.rs  fpscounter.rs  lib.rs  messenger.rs  placeholder_entities.rs  rust_godot_communicator.rs  rustbridge.rs  rustbridge_gameloop.rs  rustbridge_messages.rs  sim_abilities.rs  sim_abilities_list.rs  sim_ecs.rs  sim_fix_math.rs  sim_gameloop.rs  sim_map.rs  sim_object.rs  sim_player_alliances.rs  sim_state_components.rs  sim_sys_movement.rs  sim_sys_pathfinding.rs  sim_systems.rs  sim_unit_base_components.rs  sim_weapon_list.rs  simulation.rs
Simulation/src/common/: mod.rs  types.rs
Simulation/src/sim_components/: active_ability_comp.rs  cooldown_comp.rs  health_comp.rs  mod.rs  order_queue_comp.rs  projectile_comp.rs  sim_unit_base_components.rs  structure_comp.rs  targeting_comp.rs  unitstate_comp.rs  weapon_comp.rs
Simulation/src/sim_rend_message/: messages_rend.rs  messages_sim.rs  messenger.rs  mod.rs
Simulation/src/sim_systems/: abilities.rs  fire_weapons.rs  health.rs  input_systems.rs  mod.rs  movement.rs  pathfinding.rs  projectiles.rs  targeting.rs  unit_behaviour_ai.rs  validate_order.rs
(+46 files in other folders)
