[package]
name = "simulation"
version = "0.1.0"
authors = ["vilius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[dependencies]
rand = "0.7.3"
#doryen-fov = "0.1.1"
fixed-sqrt = "0.2.1"
gdnative = "0.8.1"
hecs = "0.2.12"
pathfinding = "2.0.4"
itertools = "0.9.0"
num-traits = "0.2.12"

[dependencies.fixed]
version = "1.1.0" # for fixed sqrt to work
# features = ["f16", "serde"]
features = ["num-traits"]

[lib]
crate-type = ["cdylib"]